packages/isar_generator/test/errors/property/enum_list_type.dart
// unsupported enum property type

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  @Enumerated(EnumType.value, 'value')
  late MyEnum prop;
}

enum MyEnum {
  optionA;

  final List<String> value = [];
}
